--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap');
+
+
 
 @tailwind base;
 @tailwind components;
@@ -11,9 +14,13 @@ html.dark {
   color-scheme: dark;
 }
 
+*{
+  font-family: "Poppins", "Quicksand", "Instrument Sans";
+}
+
 @layer base {
   html {
-    font-family: 'Inter', system-ui, sans-serif;
+    font-family: "Poppins", "Quicksand", "Instrument Sans";
     transition: background-color 0.3s ease, color 0.3s ease;
   }
   
