--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,16 @@ html.dark {
   }
 }
 
+
+.h-scroll {
+  @apply [&::-webkit-scrollbar]:h-2 [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500
+}
+
+.v-scroll {
+  @apply [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-track]:bg-transparent [&::-webkit-scrollbar-thumb]:bg-transparent dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500
+}
+
+
 /* Animations améliorées */
 .fade-enter-active,
 .fade-leave-active {
