--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ html.dark {
   }
   
   body {
-    @apply bg-white dark:bg-gray-900 text-gray-900 dark:text-gray-100;
+    @apply bg-white text-gray-900;
   }
 
   .container {
